--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "nepali-calendar-js": "^1.0.4",
     "react": "16.11.0",
+    "react-google-calendar-api": "^1.0.11",
     "react-native": "0.62.2",
-    "react-native-axios": "^0.17.1"
+    "react-native-axios": "^0.17.1",
+    "react-native-calendar-events": "^1.7.3"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
